--- a/com.cyt.music.webapp/src/main/webapp/css/stylesheets/tao.css
+++ b/com.cyt.music.webapp/src/main/webapp/css/stylesheets/tao.css
@@ -3,6 +3,8 @@ html,body{
     padding: 0;
     height: 100%;
     background-color: #ffffff;
+    min-width: 100%;
+    max-width: 1000px;
 }
 ul{
     margin: 0;
