--- a/com.cyt.music.webapp/src/main/webapp/css/form/style1.css
+++ b/com.cyt.music.webapp/src/main/webapp/css/form/style1.css
@@ -39,12 +39,9 @@ Form
 
 -------------------------------- */
 .cd-form {
-  float: left;
-  width: 30%;
-  max-width: 100%;
-  /*margin: 4em;*/
-  padding-top: 6%;
-  margin-left: 25%;
+  width: 90%;
+  max-width: 600px;
+  margin: 4em auto;
 }
 .cd-form::after {
   clear: both;
