--- a/com.cyt.music.webapp/src/main/webapp/css/stylesheets/tao.css
+++ b/com.cyt.music.webapp/src/main/webapp/css/stylesheets/tao.css
@@ -118,6 +118,8 @@ a,a:link,a:visited,a:hover,a:active{
     /*text-indent: 2rem;*/
     font-family: Arial;
     font-size: 24px;
+    margin-top: 2rem;
+    text-indent:3rem
 }
 .home-brief-body .home-brief-item{
     display: inline-block;
@@ -265,7 +267,7 @@ section.t-body{
     font-size: 1.2rem;
     color: #AEAEAE;
     font-family: Arial;
-    border-bottom: 1px solid #9D9D9D;
+    /*border-bottom: 1px solid #9D9D9D;*/
     padding-bottom:35px
 }
 .titleImg{
@@ -391,7 +393,7 @@ section.t-body{
 /*服务*/
 .service__container .m-pane-title{
     width: 70%;
-    border-bottom: 1px solid #9D9D9D;
+    /*border-bottom: 1px solid #9D9D9D;*/
     padding-bottom: 35px;
 }
 .m-pane-title .fee{
