--- a/com.cyt.music.webapp/src/main/webapp/css/stylesheets/tao.css
+++ b/com.cyt.music.webapp/src/main/webapp/css/stylesheets/tao.css
@@ -361,6 +361,12 @@ section.t-body{
     padding: 0 .5rem 0 .4rem;
     font-family: Arial;
 }
+.m-pane-body .m-scene-card .card-cover .card-city.shanghai{
+    background-color: #411aff;
+    /*letter-spacing: .1rem;*/
+    padding: 0 .5rem 0 .4rem;
+    font-family: Arial;
+}
 .m-pane-body .m-scene-card img{
     width: 100%;
     height: 16rem;
@@ -697,6 +703,7 @@ section.t-body{
     height: 20rem;
     width: auto;
     margin: .5rem;
+    border-radius: 10px;
 }
 .modal-body  .right-side{
     display: inline-block;
